# ds-bulk-download

./: .env.example  .gitignore  .prettierignore  README.md  config.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: cd.yml  lambda-deploy.yml  lambda-run.yml
app/: __init__.py
app/lib/: aws.py
app/main/: routes.py
app/merlin/: __init__.py  routes.py
app/templates/: base.html
app/templates/merlin/: index.html
aws/lambda/: batch-zip-merlin-files.py  test.py
docs/: command-line-tasks.md  lambda.md
s3/: init.sh
src/scripts/: analytics.js
src/styles/: font-awesome.scss
tasks/: create_lambda.sh  merlin_manifest.json  process.py  test.py
