[tool.poetry]
name = "tna-flask-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
tna-utilities = {version = "^1.4.0", extras = ["flask"]}
tna-frontend-jinja = "0.41.0"
boto3 = "^1.43.24"
pydantic = "^2.13.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1,<10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
